fix: 调整资源路径以支持 GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盖洛普教练展示平台</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="/coach-platform/css/style.css">
+    <link rel="stylesheet" href="/coach-platform/css/responsive.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
@@ -60,8 +60,8 @@
         </div>
     </footer>
 
-    <script src="js/data-loader.js"></script>
-    <script src="js/filter.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/coach-platform/js/data-loader.js"></script>
+    <script src="/coach-platform/js/filter.js"></script>
+    <script src="/coach-platform/js/main.js"></script>
 </body>
 </html> 
