update: 优化教练详情页联系功能和样式 - 改进联系教练弹窗设计 - 添加返回详情页按钮 - 优化微信号和优惠信息展示

--- a/coach-detail.html
+++ b/coach-detail.html
@@ -26,6 +26,27 @@
         <div class="coach-profile">
             <!-- 详情内容将通过 JavaScript 动态加载 -->
         </div>
+        <div class="detail-actions">
+            <a href="index.html" class="back-btn">返回列表</a>
+            <button class="contact-btn" onclick="showContactInfo()">联系教练</button>
+        </div>
+
+        <!-- 联系方式弹窗 -->
+        <div id="contactModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>联系教练</h2>
+                <div class="wechat-info">
+                    <p class="wechat-id">教练微信号：<span id="coachWechat"></span></p>
+                    <p class="discount-tip">添加微信时请备注"教练平台"，可享受7折优惠</p>
+                </div>
+                <div class="modal-actions">
+                    <button class="close-modal-btn" onclick="document.getElementById('contactModal').style.display='none'">
+                        返回详情页
+                    </button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- 页脚 -->
