--- a/coach-detail.html
+++ b/coach-detail.html
@@ -15,6 +15,7 @@
             <div class="logo">盖洛普教练展示</div>
             <ul class="nav-menu">
                 <li><a href="index.html">首页</a></li>
+                <li><a href="https://m.qlchat.com/wechat/page/live/2000014880701342" target="_blank">课程导览</a></li>
                 <li><a href="#">关于我们</a></li>
                 <li><a href="#">联系方式</a></li>
             </ul>
