--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盖洛普教练展示平台</title>
-    <link rel="stylesheet" href="/coach-platform/css/style.css">
-    <link rel="stylesheet" href="/coach-platform/css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
     <header class="header">
         <nav class="nav-container">
             <div class="logo">盖洛普教练展示</div>
+            <button class="menu-toggle" aria-label="切换菜单">
+                <span class="hamburger"></span>
+            </button>
             <ul class="nav-menu">
                 <li><a href="#" class="active">首页</a></li>
+                <li><a href="https://m.qlchat.com/wechat/page/live/2000014880701342" target="_blank">课程导览</a></li>
                 <li><a href="#">关于我们</a></li>
                 <li><a href="#">联系方式</a></li>
             </ul>
@@ -60,8 +64,8 @@
         </div>
     </footer>
 
-    <script src="/coach-platform/js/data-loader.js"></script>
-    <script src="/coach-platform/js/filter.js"></script>
-    <script src="/coach-platform/js/main.js"></script>
+    <script src="js/data-loader.js"></script>
+    <script src="js/filter.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html> 
