update: 优化网站性能和移动端访问 - 添加 CDN 加速支持 - 更新资源引用路径 - 添加 404 错误页面 - 添加缓存和压缩配置 - 添加 PWA 支持 - 优化图片资源

--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>教练资料管理 - 盖洛普教练展示平台</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/admin.css">
 </head>
 <body>
     <header class="header">
@@ -120,6 +120,6 @@
         </div>
     </main>
 
-    <script src="js/admin.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/admin.js"></script>
 </body>
 </html> 
