--- a/coach-detail.html
+++ b/coach-detail.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>教练详情 - 盖洛普教练展示平台</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/detail.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/responsive.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/detail.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
@@ -57,7 +57,7 @@
         </div>
     </footer>
 
-    <script src="js/data-loader.js"></script>
-    <script src="js/detail.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/data-loader.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/detail.js"></script>
 </body>
 </html> 
