--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盖洛普教练展示平台</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/responsive.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
@@ -64,8 +64,8 @@
         </div>
     </footer>
 
-    <script src="js/data-loader.js"></script>
-    <script src="js/filter.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/data-loader.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/filter.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/main.js"></script>
 </body>
 </html> 
