--- a/coach-detail.html
+++ b/coach-detail.html
@@ -35,14 +35,13 @@
         <!-- 联系方式弹窗 -->
         <div id="contactModal" class="modal">
             <div class="modal-content">
-                <span class="close">&times;</span>
                 <h2>联系教练</h2>
                 <div class="wechat-info">
-                    <p class="wechat-id">教练微信号：<span id="coachWechat"></span></p>
-                    <p class="discount-tip">添加微信时请备注"教练平台"，可享受7折优惠</p>
+                    <p class="wechat-id">微信号：<span id="coachWechat"></span></p>
+                    <p class="discount-note">备注"教练平台"可享7折优惠</p>
                 </div>
                 <div class="modal-actions">
-                    <button class="close-modal-btn" onclick="document.getElementById('contactModal').style.display='none'">
+                    <button class="back-btn" onclick="document.getElementById('contactModal').style.display='none'">
                         返回详情页
                     </button>
                 </div>
