--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盖洛普教练展示平台</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
@@ -27,6 +27,10 @@
     <!-- 搜索筛选区域 -->
     <section class="filter-section">
         <div class="filter-container">
+            <div class="section-title">
+                <h2>盖洛普教练展示平台</h2>
+                <p class="subtitle">专业教练助您成长</p>
+            </div>
             <div class="filter-group">
                 <h3>擅长领域</h3>
                 <div class="specialty-tags">
@@ -60,12 +64,12 @@
     <!-- 页脚 -->
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2024 盖洛普教练展示平台 版权所有</p>
+            <p>&copy; 一洲优势大院教练展示平台 版权所有</p>
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/data-loader.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/filter.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/main.js"></script>
+    <script src="js/data-loader.js"></script>
+    <script src="js/filter.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html> 
