--- a/coach-detail.html
+++ b/coach-detail.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>教练详情 - 盖洛普教练展示平台</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/responsive.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/css/detail.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/detail.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">盖洛普教练展示</div>
+            <div class="logo">盖洛普教练展示平台</div>
+            <button class="menu-toggle" aria-label="切换菜单">
+                <span class="hamburger"></span>
+            </button>
             <ul class="nav-menu">
                 <li><a href="index.html">首页</a></li>
                 <li><a href="https://m.qlchat.com/wechat/page/live/2000014880701342" target="_blank">课程导览</a></li>
@@ -27,26 +30,6 @@
         <div class="coach-profile">
             <!-- 详情内容将通过 JavaScript 动态加载 -->
         </div>
-        <div class="detail-actions">
-            <a href="index.html" class="back-btn">返回列表</a>
-            <button class="contact-btn" onclick="showContactInfo()">联系教练</button>
-        </div>
-
-        <!-- 联系方式弹窗 -->
-        <div id="contactModal" class="modal">
-            <div class="modal-content">
-                <h2>联系教练</h2>
-                <div class="wechat-info">
-                    <p class="wechat-id">微信号：<span id="coachWechat"></span></p>
-                    <p class="discount-note">备注"教练平台"可享7折优惠</p>
-                </div>
-                <div class="modal-actions">
-                    <button class="back-btn" onclick="document.getElementById('contactModal').style.display='none'">
-                        返回详情页
-                    </button>
-                </div>
-            </div>
-        </div>
     </main>
 
     <!-- 页脚 -->
@@ -56,7 +39,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/data-loader.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/zjlingdi/coach-platform@main/js/detail.js"></script>
+    <script src="js/data-loader.js"></script>
+    <script src="js/detail.js"></script>
 </body>
-</html> 
+</html>
