update: 修改筛选栏样式和类名

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="filter-group">
                 <div class="filter-category">
                     <h3>擅长领域</h3>
-                    <div class="tag-cloud">
+                    <div class="specialty-tags"> <!-- 修改类名保持与CSS一致 -->
                         <label class="tag-item">
                             <input type="checkbox" name="expertise" value="领导力">
                             <span class="tag-text">领导力</span>
@@ -57,7 +57,6 @@
                         </label>
                     </div>
                 </div>
-                
                 <div class="filter-category">
                     <h3>价格区间</h3>
                     <div class="price-selector">
