update: 调整筛选栏布局和样式

--- a/index.html
+++ b/index.html
@@ -29,16 +29,12 @@
         <div class="filter-container">
             <div class="filter-header">
                 <h2>寻找适合你的教练</h2>
-                <div class="filter-controls">
-                    <!-- <button class="filter-reset">重置</button> -->
-                    <!-- <button class="filter-confirm">确认</button> -->
-                </div>
             </div>
             
             <div class="filter-group">
                 <div class="filter-category">
                     <h3>擅长领域</h3>
-                    <div class="specialty-tags"> <!-- 修改类名保持与CSS一致 -->
+                    <div class="specialty-tags">
                         <label class="tag-item">
                             <input type="checkbox" name="expertise" value="领导力">
                             <span class="tag-text">领导力</span>
@@ -57,6 +53,7 @@
                         </label>
                     </div>
                 </div>
+                
                 <div class="filter-category">
                     <h3>价格区间</h3>
                     <div class="price-selector">
